--- a/books-api/package.json
+++ b/books-api/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
+    "react-social-icons": "^5.15.0",
     "sass": "^1.57.1"
   },
   "devDependencies": {
